# Prog2UE

./: .gitignore
Animal/: Makefile  Test
Animal (1)/src/: Dog.h  Test.cpp
Animal/src/: Animal.h
Array/: Main  Makefile
Array (5)/src/: TemplateArray.h
Array/src/: Array.h  DummyClass.h  IntArray.h  main.cpp
Bibliothek/: CMakeCache.txt  CMakeLists.txt  Main  Makefile  cmake_install.cmake  customers.txt  items.txt  uml.txt
Bibliothek/src/: Book.h  Customer.cpp  Customer.h  Inventory.cpp  Inventory.h  Lendable.cpp  Lendable.h  Library.cpp  Library.h  Person.cpp  Person.h  Renderer.cpp  Renderer.h  main.cpp
BibliothekV2/: CMakeLists.txt  Main  log.txt
BibliothekV2 (4+8)/: customers.txt  inventory.txt
BibliothekV2 (4+8)/src/: Customer.cpp  Customer.h  Library.cpp  Library.h  Main.cpp  Renderer.h
BibliothekV2/src/: Lendable.cpp  Lendable.h  Library.cpp  Library.h  Main.cpp  Renderer.cpp  Renderer.h
Dynamic/: Makefile  Test
Dynamic (2)/: CMakeLists.txt
Dynamic (2)/src/: Animal.h  Dog.cpp  Door.h  Test.cpp
Dynamic/src/: Animal.cpp  Door.cpp  Door.h  Dragon.cpp  Dragon.h  DynamicObject.h  Radio.cpp  Radio.h  Test.cpp
LinkedList (10)/: CMakeLists.txt  Test.cpp
LinkedList (10)/src/: IntegerClass.cpp  IntegerClass.h  LinkedList.h
Lotti_Karotti/: CMakeLists.txt  Lotti  LottiKarotti  Makefile  Matchfield.cpp  a.out  spielidee.txt
Lotti_Karotti/src/: Card.cpp  Card.h  Player.cpp  (+1 more)
Lotti_OOP/: CMakeLists.txt  Makefile  systemidee.txt
Lotti_OOP (3)/: Lotti
Lotti_PROC/: Lotti
Lottiv2/: Lotti.cpp
Threads/: Animation
Threads (7)/: animation.cpp
(+9 files in other folders)
